<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="cardinfo"
            type="dev.wxlf.mobint_test_task.data.entities.CardEntity" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin1"
        app:cardCornerRadius="@dimen/margin1"
        app:cardElevation="0dp"
        app:customCardBackgroundColor="@{cardinfo.mobileAppDashboard.cardBackgroundColor}">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin2"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{cardinfo.mobileAppDashboard.companyName, default=Bonus_Money}"
                    android:textSize="@dimen/text1"
                    app:textColor="@{cardinfo.mobileAppDashboard.highlightTextColor}" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="@dimen/logoSize" >
                    <ImageView
                        android:layout_width="@dimen/logoSize"
                        android:layout_height="@dimen/logoSize"
                        app:srcCompat="@drawable/logo_placeholder"
                        app:url="@{cardinfo.mobileAppDashboard.logo}"
                        android:contentDescription="@string/company_logo" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin1"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(cardinfo.customerMarkParameters.mark), default=200}"
                    android:textSize="@dimen/text0"
                    app:textColor="@{cardinfo.mobileAppDashboard.highlightTextColor}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin2"
                    android:text="@string/points"
                    android:textSize="@dimen/text3"
                    app:textColor="@{cardinfo.mobileAppDashboard.textColor}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin2"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin2"
                        android:text="@string/cashback"
                        android:textSize="@dimen/text4"
                        app:textColor="@{cardinfo.mobileAppDashboard.textColor}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin2"
                        android:text='@{String.valueOf(cardinfo.customerMarkParameters.loyaltyLevel.number) + " %", default=1}'
                        android:textSize="@dimen/text2"
                        app:textColor="@{cardinfo.mobileAppDashboard.highlightTextColor}" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin3"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin2"
                        android:text="@string/level"
                        android:textSize="@dimen/text4"
                        app:textColor="@{cardinfo.mobileAppDashboard.textColor}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin2"
                        android:text='@{cardinfo.customerMarkParameters.loyaltyLevel.name, default=Базовый_уровень_тест}'
                        android:textSize="@dimen/text2"
                        app:textColor="@{cardinfo.mobileAppDashboard.highlightTextColor}" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin2"
                android:gravity="center_vertical|end"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/eyeButton"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize"
                    android:layout_marginEnd="@dimen/margin3"
                    android:contentDescription="@string/eye_button"
                    app:srcCompat="@drawable/eye_white"
                    app:iconColor="@{cardinfo.mobileAppDashboard.mainColor}"
                    tools:ignore="RedundantDescriptionCheck" />

                <ImageView
                    android:id="@+id/trashButton"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize"
                    android:layout_marginEnd="@dimen/margin3"
                    android:contentDescription="@string/trash_button"
                    app:srcCompat="@drawable/trash_white"
                    app:iconColor="@{cardinfo.mobileAppDashboard.accentColor}"
                    tools:ignore="RedundantDescriptionCheck" />

                <TextView
                    android:id="@+id/moreButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin2"
                    android:paddingVertical="@dimen/margin2"
                    android:paddingHorizontal="24dp"
                    android:background="@drawable/button_background"
                    android:backgroundTint="@color/lightGrey"
                    android:text="@string/more"
                    android:textSize="@dimen/text4"
                    app:textColor="@{cardinfo.mobileAppDashboard.mainColor}"
                    app:bgColor="@{cardinfo.mobileAppDashboard.backgroundColor}"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

        <include layout="@layout/loading_item"
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</layout>